# P3-Python-in-Data

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: dependency_faq.md
scripts/: bootstrap.sh  check_setup.py  doctor.py
sql/: validation_queries.sql
src/ecommerce_datagen/: __init__.py  __main__.py  check_setup.py  cli.py  doctor.py  logging_utils.py  seed.py  settings.py  static_data.py
src/ecommerce_datagen/db/: connection.py  schema.py
src/ecommerce_datagen/generators/: __init__.py  brand.py  category.py  product.py  promotion.py  promotion_product.py  seller.py
tests/: test_generators.py  test_settings.py
